--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
     <script>
         // Configuración de JSONBin.io
         const JSONBIN_CONFIG = {
-            masterKey: '$2a$10$edBhv0ItC665Z6m4Ldxhmu84l4wbzPHLJPse2dbfJOPGmQQkz6.q',
+            masterKey: '$2a$10$uv5Xhoawx4kzx1Fvaf9wHeBxsG9LZyOMCF8vVScopK5ZMeMrMSZS.',
             accessKey: '$2a$10$tjJJemGEMGj0/SMP4A4IiOnqnd6gs6oaFZxfGN8XJS7XIOPiQQDSC',
             apiUrl: 'https://api.jsonbin.io/v3/b'
         };
